# mrfmsim

./: .gitignore  1.0.0  CHANGELOG.rst  LICENSE  README.rst  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md
.github/workflows/: docs.yml  tox.yaml  tox.yml
docs/: api_component.rst  api_configuration.rst  api_plugin.rst  api_units.rst  collection.rst  conf.py  contribute.rst  coordinates.rst  index.rst  overview.rst  ref_cli.rst  ref_component.rst  ref_configuration.rst  ref_experiment.rst  ref_model.rst  ref_modifier.rst  ref_plugin.rst  ref_shortcut.rst
docs/_downloads/: mrfmsim_overview.ipynb
docs/basic/: component.rst  inheritance.rst  modifier.rst  plugin.rst  tip_size.rst
docs/component/: cantilever.rst  grid.rst  magnet.rst  sample.rst
docs/setup/: coordinates.rst  magnet.rst
mrfmsim/: __init__.py  ancillary.py  cli.py  collection.py  component.py  configuration.py  experiment.py  filter.py  graph.py  group.py  model.py  modifier.py  node.py  plugin.py  shortcut.py  utility.py  utils.py
mrfmsim/component/: __init__.py  base.py  cantilever.py  cylindermagnet.py  grid.py  magnet.py  magnet_cylinder.py  magnet_cylinder_approx.py  magnet_cylinder_indirect.py  sample.py
mrfmsim/experiment/: cermitarp.py  cermitesr.py  cermitsinglespin.py  cermittd.py  cermittd_fast.py  ibmcyclic.py  stdelements.py  stdnodes.py
mrfmsim/formula/: field.py  magnetization.py  misc.py  polarization.py
tests/: conftest.py  test_ancillary.py  test_cli.py  test_collection.py  test_component.py  test_configuration.py  test_experiment.py  test_group.py  test_model.py  test_modifier.py  test_node.py  test_plugin.py  test_shortcut.py  test_utility.py  test_utils.py
tests/test_component/: test_base.py  test_cantilever.py  test_cylindermagnet.py  test_grid.py  test_magnet.py  test_magnet_cylinder.py  test_magnet_cylinder_approx.py  test_megnat_cylinder.py  test_sample.py
tests/test_experiment/: test_cermitarp.py  test_cermitesr.py  test_cermitsinglespin.py  test_cermittd.py  test_ibmcyclic.py  test_import.py
tests/test_formula/: test_field.py  test_magnetization.py  test_math.py  test_misc.py  test_polarization.py
