[tool.poetry]
name = "MrfmSim"
version = "0.1.0"
description = "Simulate magnetic resonance force microscopy experiments."
authors = ["Peter Sun <hs859@cornell.edu>", "John Marohn <jam99@cornell.edu>"]
maintainers = ["Peter Sun <hs859@cornell.edu>"]
repository = "https://www.github.edu/Marohn-Group/mrfmsim"
# adds all subpackages
packages = [{ include = "mrfmsim" }]
readme = "README.rst"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.8"
numpy = ">=1.18" # conflict with numba 0.55.1 for 1.22 above
pyyaml = "^6.0"
mmodel = ">=0.6.0"
click = ">=8.1.3"
tox = { version = ">=3.25.0", optional = true }
tox-conda = { version = ">=0.9.2", optional = true } 
pytest = { version = ">=7", optional = true }
pytest-cov = { version = ">=4.0.0", optional = true }
sphinx = { version = "^6.1.3", optional = true }
sphinx-book-theme = { version = ">=1.0.1", optional = true }
nbsphinx = { version = "^0.9.1", optional = true }

[tool.poetry.scripts]
mrfmsim = "mrfmsim.cli:cli"

[tool.poetry.extras]
test = ["tox", "pytest", "pytest-cov"]
docs = ["nbsphinx", "sphinx", "sphinx_book_theme"]


[tool.coverage.run]
# pytest coverage
source_pkgs = ['mrfmsim']
omit = ['tests/*']

[tool.tox]
# for testing different python environments

legacy_tox_ini = """
[tox]
requires = tox-conda
envlist = py38, py39, py310, py311, coverage
isolated_build = True
 
[testenv:py38]
deps = pytest >= 7.1.1
commands = pytest

[testenv:py39]
deps = pytest >= 7.1.1
commands = pytest

[testenv:py310]
deps = pytest >= 7.1.1
commands = pytest

[testenv:py311]
deps = pytest >= 7.1.1
commands = pytest

[testenv:coverage]
deps = 
    pytest >= 7.1.1
    pytest-cov >= 3.0.0
commands =
    coverage run --source=tests -m pytest
    coverage html
    coverage report

[testenv:docs]
deps = 
    sphinx == 6.1.3
    sphinx-book-theme == 1.0.0
    nbsphinx == 0.9.1
commands =
    # sphinx-build -W -b html ./docs ./docs/_build/html
    sphinx-build -W -b html -d "{toxworkdir}/docs" docs "{toxinidir}/docs/_build/html"
"""
